--- a/index.ipynb
+++ b/index.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,10 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = np.random.normal(size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.append(data, [1.2, 1.2, 1.2, 1.2, 1.2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,17 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.11410287193760475\n"
+     ]
+    }
+   ],
    "source": [
     "def get_mean(data):\n",
-    "    pass\n",
+    "    return data.mean()\n",
     "\n",
-    "test1 = [5, 10, 15]\n",
-    "test2 = [1, 2, 3]\n",
-    "print(get_mean(test1)) # 10.0\n",
-    "print(get_mean(test2)) # 2.0\n",
+    "\n",
     "print(get_mean(data)) # 0.11410287193760468"
    ]
   },
@@ -110,10 +126,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0131202059472249"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.std()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,15 +173,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12898291075741067\n"
+     ]
+    }
+   ],
    "source": [
     "def get_median(data):\n",
-    "    pass\n",
+    "    return np.median(data)\n",
     "\n",
-    "test1 = [5, 4, 1, 3, 2]\n",
-    "test2 = [4, 2, 3, 1]\n",
     "\n",
-    "print(get_median(test1)) # 3\n",
-    "print(get_median(test2)) # 2.5\n",
     "print(get_median(data)) # 0.12898291075741067"
    ]
   },
@@ -171,18 +211,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_mode(data):\n",
-    "    pass\n",
+    "import collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([4, 4, 2, 1, 2])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [1,1,1,1,2,2,2,2,3,3,4,5,5]\n",
+    "counter = collections.Counter(x)\n",
+    "counter.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.76405235,  0.40015721,  0.97873798,  2.2408932 ,  1.86755799,\n",
+       "       -0.97727788,  0.95008842, -0.15135721, -0.10321885,  0.4105985 ,\n",
+       "        0.14404357,  1.45427351,  0.76103773,  0.12167502,  0.44386323,\n",
+       "        0.33367433,  1.49407907, -0.20515826,  0.3130677 , -0.85409574,\n",
+       "       -2.55298982,  0.6536186 ,  0.8644362 , -0.74216502,  2.26975462,\n",
+       "       -1.45436567,  0.04575852, -0.18718385,  1.53277921,  1.46935877,\n",
+       "        0.15494743,  0.37816252, -0.88778575, -1.98079647, -0.34791215,\n",
+       "        0.15634897,  1.23029068,  1.20237985, -0.38732682, -0.30230275,\n",
+       "       -1.04855297, -1.42001794, -1.70627019,  1.9507754 , -0.50965218,\n",
+       "       -0.4380743 , -1.25279536,  0.77749036, -1.61389785, -0.21274028,\n",
+       "       -0.89546656,  0.3869025 , -0.51080514, -1.18063218, -0.02818223,\n",
+       "        0.42833187,  0.06651722,  0.3024719 , -0.63432209, -0.36274117,\n",
+       "       -0.67246045, -0.35955316, -0.81314628, -1.7262826 ,  0.17742614,\n",
+       "       -0.40178094, -1.63019835,  0.46278226, -0.90729836,  0.0519454 ,\n",
+       "        0.72909056,  0.12898291,  1.13940068, -1.23482582,  0.40234164,\n",
+       "       -0.68481009, -0.87079715, -0.57884966, -0.31155253,  0.05616534,\n",
+       "       -1.16514984,  0.90082649,  0.46566244, -1.53624369,  1.48825219,\n",
+       "        1.89588918,  1.17877957, -0.17992484, -1.07075262,  1.05445173,\n",
+       "       -0.40317695,  1.22244507,  0.20827498,  0.97663904,  0.3563664 ,\n",
+       "        0.70657317,  0.01050002,  1.78587049,  0.12691209,  0.40198936,\n",
+       "        1.2       ,  1.2       ,  1.2       ,  1.2       ,  1.2       ])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-1499f596baa5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcollections\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'x2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "list(collections.Counter(x2).keys())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "test1 = [1, 2, 3, 5, 5, 4]\n",
-    "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
-    "print(get_mode(test1)) # [5]\n",
-    "print(get_mode(test2)) # [1, 5]\n",
+    "\n",
+    "def get_mode(data):\n",
+    "    counts = np.array(list(collections.Counter(data).values()))\n",
+    "    max_count = np.array(list(collections.Counter(data).values())).max()\n",
+    "    max_list = []\n",
+    "    \n",
+    "    for index, count in enumerate(counts):\n",
+    "        if count == max_count:\n",
+    "            max_list.append(list(collections.Counter(data).keys())[index])\n",
+    "        \n",
+    "    mode_list = []\n",
+    "    if len(max_list)>1:\n",
+    "        for max in max_list:\n",
+    "            mode_list.append(max)\n",
+    "    else:\n",
+    "        return max_list[0]\n",
+    "        #return data[max_list[0]]\n",
+    "    \n",
+    "    #return max_count, counts, max_list, mode_list\n",
+    "    return sum(mode_list)/len(mode_list)\n",
+    "    \n",
+    "\n",
     "print(get_mode(data)) # [1.2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2 = np.array([float(y) for y in x])\n",
+    "type(x2[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 2., 2., 2., 2., 3., 3., 4., 5., 5.])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x3=[3,3,3, 7, 7, 7, 100, 100, 100, 2000000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x3=[float(y) for y in x3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x3= np.array(x3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.666666666666664"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_mode(x3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.666666666666664"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(3+7+100)/3"
    ]
   },
   {
@@ -200,15 +508,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.76405235,  0.40015721,  0.97873798,  2.2408932 ,  1.86755799,\n",
+       "       -0.97727788,  0.95008842, -0.15135721, -0.10321885,  0.4105985 ,\n",
+       "        0.14404357,  1.45427351,  0.76103773,  0.12167502,  0.44386323,\n",
+       "        0.33367433,  1.49407907, -0.20515826,  0.3130677 , -0.85409574,\n",
+       "       -2.55298982,  0.6536186 ,  0.8644362 , -0.74216502,  2.26975462,\n",
+       "       -1.45436567,  0.04575852, -0.18718385,  1.53277921,  1.46935877,\n",
+       "        0.15494743,  0.37816252, -0.88778575, -1.98079647, -0.34791215,\n",
+       "        0.15634897,  1.23029068,  1.20237985, -0.38732682, -0.30230275,\n",
+       "       -1.04855297, -1.42001794, -1.70627019,  1.9507754 , -0.50965218,\n",
+       "       -0.4380743 , -1.25279536,  0.77749036, -1.61389785, -0.21274028,\n",
+       "       -0.89546656,  0.3869025 , -0.51080514, -1.18063218, -0.02818223,\n",
+       "        0.42833187,  0.06651722,  0.3024719 , -0.63432209, -0.36274117,\n",
+       "       -0.67246045, -0.35955316, -0.81314628, -1.7262826 ,  0.17742614,\n",
+       "       -0.40178094, -1.63019835,  0.46278226, -0.90729836,  0.0519454 ,\n",
+       "        0.72909056,  0.12898291,  1.13940068, -1.23482582,  0.40234164,\n",
+       "       -0.68481009, -0.87079715, -0.57884966, -0.31155253,  0.05616534,\n",
+       "       -1.16514984,  0.90082649,  0.46566244, -1.53624369,  1.48825219,\n",
+       "        1.89588918,  1.17877957, -0.17992484, -1.07075262,  1.05445173,\n",
+       "       -0.40317695,  1.22244507,  0.20827498,  0.97663904,  0.3563664 ,\n",
+       "        0.70657317,  0.01050002,  1.78587049,  0.12691209,  0.40198936,\n",
+       "        1.2       ,  1.2       ,  1.2       ,  1.2       ,  1.2       ])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Effect outlier had on mean: 1799997.0\n",
+      "Effect outlier had on median: 0.0\n",
+      "Effect outlier had on mode: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "def check_outlier_effect(data, outlier):\n",
-    "    pass\n",
+    "    ct_list = [data.mean(), get_mode(data), get_median(data)]\n",
+    "    modified = np.append(data, outlier)\n",
+    "    mod_ct_list = [modified.mean(), get_mode(modified), get_median(modified)]\n",
+    "    dif_list = np.array(mod_ct_list)-np.array(ct_list)\n",
+    "    #print(ct_list, mod_ct_list)\n",
+    "    return dif_list[0], dif_list[1], dif_list[2]\n",
     "    \n",
     "\n",
-    "mean_effect, median_effect, mode_effect = check_outlier_effect(data, 20)\n",
+    "mean_effect, median_effect, mode_effect = check_outlier_effect(x3, 20000000)\n",
     "print(\"Effect outlier had on mean: {}\".format(mean_effect))\n",
     "print(\"Effect outlier had on median: {}\".format(median_effect))\n",
     "print(\"Effect outlier had on mode: {}\".format(mode_effect))"
@@ -239,16 +602,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "[-10   1   1   2   3   4   5   5   6  20]\n",
+      "0.6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_trimmed_mean(data, trim=.05):\n",
-    "    pass\n",
+    "    data = np.array(data)\n",
+    "    return None\n",
     "\n",
     "trimmed_mean_test = [-10, 1, 1, 2, 3, 4, 5, 5, 6, 20] # trim = .10\n",
     "print(get_trimmed_mean(trimmed_mean_test, .10)) # 3.375\n",
-    "print(get_trimmed_mean(data)) # -0.013374707098353195"
+    "print(get_trimmed_mean(data)) # -0.013374707098353195\n",
+    "print(np.sort(np.array(trimmed_mean_test)))\n",
+    "length = len(trimmed_mean_test)\n",
+    "to_trim = .06\n",
+    "to_trim = length * to_trim\n",
+    "print(to_trim)\n",
+    "int(to_trim)  \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -280,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
