Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -639,7 +639,7 @@
     "to_trim = .06\n",
     "to_trim = length * to_trim\n",
     "print(to_trim)\n",
-    "int(to_trim)  \n",
+    "int(round(to_trim))  \n",
     "\n",
     "\n"
    ]
