Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -602,6 +602,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rom decimal import localcontext, Decimal, ROUND_HALF_UP"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -643,7 +652,12 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "f\n",
+    ">>> with localcontext() as ctx:\n",
+    "...     ctx.rounding = ROUND_HALF_UP\n",
+    "...     for i in range(1, 15, 2):\n",
+    "...         n = Decimal(i) / 2\n",
+    "...         print(n, '=>', n.to_integral_value())\n",
     "\n"
    ]
   },
