--- a/index.ipynb
+++ b/index.ipynb
@@ -606,7 +606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rom decimal import localcontext, Decimal, ROUND_HALF_UP"
+    "from decimal import localcontext, Decimal, ROUND_HALF_UP"
    ]
   },
   {
@@ -652,7 +652,12 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "from decimal import localcontext, Decimal, ROUND_HALF_UP\n",
+    ">>> with localcontext() as ctx:\n",
+    "...     ctx.rounding = ROUND_HALF_UP\n",
+    "...     for i in range(1, 15, 2):\n",
+    "...         n = Decimal(i) / 2\n",
+    "...         print(n, '=>', n.to_integral_value())\n",
     "\n"
    ]
   },
