Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -606,7 +606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from decimal import localcontext, Decimal, ROUND_HALF_UP"
+    "from decimal import localcontext, Decimal, ROUND_HALF_UP with localcontext() as ctx:"
    ]
   },
   {
@@ -653,7 +653,7 @@
     "\n",
     "\n",
     "from decimal import localcontext, Decimal, ROUND_HALF_UP \n",
-    "...     ctx.rounding = ROUND_HALF_UP\n",
+    "     ctx.rounding = ROUND_HALF_UP\n",
     "...     for i in range(1, 15, 2):\n",
     "...         n = Decimal(i) / 2\n",
     "...         print(n, '=>', n.to_integral_value())\n",
