--- a/index.ipynb
+++ b/index.ipynb
@@ -655,7 +655,7 @@
     "from decimal import localcontext, Decimal, ROUND_HALF_UP \n",
     "     ctx.rounding = ROUND_HALF_UP\n",
     "...     for i in range(1, 15, 2):\n",
-    "...         n = Decimal(i) / 2\n",
+    "...         n = Decimal(i) / \n",
     "...         print(n, '=>', n.to_integral_value())\n",
     "\n"
    ]
