Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -654,9 +654,7 @@
     "\n",
     "from decimal import localcontext, Decimal, ROUND_HALF_UP \n",
     "     ctx.rounding = ROUND_HALF_UP\n",
-    "...     for i in range(1, 15, 2):\n",
-    "...         n = Decimal(i) / \n",
-    "...         print(n, '=>', n.to_integral_value())\n",
+    "        to_trim.to_integral_value())\n",
     "\n"
    ]
   },
