--- a/index.ipynb
+++ b/index.ipynb
@@ -611,28 +611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "None\n",
-      "[-10   1   1   2   3   4   5   5   6  20]\n",
-      "0.5\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-0592753e44d4>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-0592753e44d4>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    to_trim.to_integral_value())\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -649,7 +637,6 @@
     "to_trim = length * to_trim\n",
     "print(to_trim)\n",
     "int(round(to_trim))  \n",
-    "\n",
     "\n",
     "\n",
     "ctx.rounding = ROUND_HALF_UP\n",
