--- a/index.ipynb
+++ b/index.ipynb
@@ -611,15 +611,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-0592753e44d4>, line 17)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "[-10   1   1   2   3   4   5   5   6  20]\n",
+      "0.5\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ROUND_HALF_UP' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-0592753e44d4>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    to_trim.to_integral_value())\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-7fd2bb1aae8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrounding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mROUND_HALF_UP\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0mto_trim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_integral_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ROUND_HALF_UP' is not defined"
      ]
     }
    ],
@@ -640,7 +653,7 @@
     "\n",
     "\n",
     "ctx.rounding = ROUND_HALF_UP\n",
-    "to_trim.to_integral_value())\n",
+    "to_trim.to_integral_value()\n",
     "\n"
    ]
   },
