Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -657,7 +657,7 @@
     "length = len(trimmed_mean_test)\n",
     "to_trim = .05\n",
     "to_trim = length * to_trim\n",
-    "print(to_trim)\n",
+    "print(round(to_trim))\n",
     "\n",
     "\n",
     "\n",
