Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -642,12 +642,12 @@
     "trimmed_mean_test = [-10, 1, 1, 2, 3, 4, 5, 5, 6, 20] # trim = .10\n",
     "print(get_trimmed_mean(trimmed_mean_test, .10)) # 3.375\n",
     "print(get_trimmed_mean(data)) # -0.013374707098353195\n",
-    "print(np.sort(np.array(trimmed_mean_test)))\n",
+    "\n",
+    "#print(np.sort(np.array(trimmed_mean_test)))\n",
     "length = len(trimmed_mean_test)\n",
     "to_trim = .06\n",
     "to_trim = length * to_trim\n",
     "print(round(to_trim))\n",
-    "\n",
     "\n",
     "\n",
     "\n",
