--- a/index.ipynb
+++ b/index.ipynb
@@ -637,6 +637,12 @@
    "source": [
     "def get_trimmed_mean(data, trim=.05):\n",
     "    data = np.array(data)\n",
+    "    \n",
+    "    length = len(trimmed_mean_test)\n",
+    "to_trim = .06\n",
+    "to_trim = length * to_trim\n",
+    "print(round(to_trim)\n",
+    "    \n",
     "    return None\n",
     "\n",
     "trimmed_mean_test = [-10, 1, 1, 2, 3, 4, 5, 5, 6, 20] # trim = .10\n",
