Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -641,7 +641,7 @@
     "    length = len(trimmed_mean_test)\n",
     "    to_trim = .06\n",
     "    to_trim = length * to_trim\n",
-    "    print(round(to_trim)\n",
+    "    to_trim round(to_trim)\n",
     "    \n",
     "    return None\n",
     "\n",
